<resources>
    <string name="app_name">tic-tac-toe</string>
    <string name="first_player_prompt">Choose 1st Player:</string>
    <string name="human">Human</string>
    <string name="Bot">Bot</string>
    <string name="token_prompt">Choose Token:</string>
    <string name="token_X">X</string>
    <string name="token_o">O</string>
    <string name="next">></string>
    <string name="second_player_prompt">Choose 2nd Player:</string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="play">PLAY</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
</resources>
