<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context="com.example.huascar.tic_tac_toe.activities.SecondPlayerSetup">

    <TextView
        android:id="@+id/player-prompt"
        android:layout_width="227dp"
        android:layout_height="70dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/second_player_prompt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <Button
        android:id="@+id/previous-button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:layout_marginLeft="96dp"
        android:layout_marginStart="96dp"
        android:color="#EB8043"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="onPreviousClick"
        android:state_checked="true"
        android:text="@string/previous"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next-button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="90dp"
        android:layout_height="77dp"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:color="#EB8043"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="onPlayClick"
        android:state_checked="true"
        android:text="@string/play"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toEndOf="@+id/previous-button" />

    <Button
        android:id="@+id/human-button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="76dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="52dp"
        android:color="#EB8043"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="onOptionClick"
        android:state_checked="true"
        android:text="@string/human"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player-prompt"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/bot-button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="76dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:color="#EB8043"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="onOptionClick"
        android:state_checked="true"
        android:text="@string/Bot"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toEndOf="@+id/human-button"
        app:layout_constraintTop_toBottomOf="@+id/player-prompt"
        app:layout_constraintVertical_bias="0.02" />

</android.support.constraint.ConstraintLayout>
