<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context="com.example.huascar.tic_tac_toe.activities.FirstPlayerSetUp">

    <TextView
        android:id="@+id/player-prompt2"
        android:layout_width="236dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/token_prompt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player-prompt"
        app:layout_constraintVertical_bias="0.406" />

    <TextView
        android:id="@+id/player-prompt"
        android:layout_width="236dp"
        android:layout_height="55dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/player_prompt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <Button
        android:id="@+id/previous-button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:color="#EB8043"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="onContinueClick"
        android:state_checked="true"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player-prompt2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/x-button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:color="#EB8043"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="onOptionClick"
        android:state_checked="true"
        android:text="@string/token_X"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player-prompt2"
        app:layout_constraintVertical_bias="0.617" />

    <Button
        android:id="@+id/human-button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="52dp"
        android:color="#EB8043"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="onOptionClick"
        android:state_checked="true"
        android:text="@string/human"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player-prompt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/o-button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginTop="8dp"
        android:color="#EB8043"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="onOptionClick"
        android:state_checked="true"
        android:text="@string/token_o"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player-prompt2"
        app:layout_constraintVertical_bias="0.527" />

    <Button
        android:id="@+id/bot-button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="52dp"
        android:color="#EB8043"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="onOptionClick"
        android:state_checked="true"
        android:text="@string/Bot"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player-prompt"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
